--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,11 @@
     @apply font-lexend;
   }
 }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear,
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-input-decoration,
+input[type="password"]::-webkit-input-password-toggle-button {
+  display: none !important;
+}
